--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -2,9 +2,16 @@
   text-align: center;
 }
 
+body {
+  background-color: rgb(115, 113, 113);
+}
+
+.title-saga {
+  color: white;
+}
 
 .App-header {
-  background-color: #222;
+  background-color: grey;
   height: 150px;
   padding: 20px;
   color: white;
@@ -12,10 +19,12 @@
 
 .App-title {
   font-size: 1.5em;
+  color: darkgrey;
 }
 
 .App-intro {
   font-size: large;
+  color: whitesmoke;
 }
 
 @keyframes App-logo-spin {
